gcc/testsuite/rust/rustc/ui/for/for-loop-refutable-pattern-error-message.rs
fn main() {
    for &1 in [1].iter() {} // { dg-error ".E0005." "" { target *-*-* } }
}

